--- a/Changes
+++ b/Changes
@@ -1,6 +1,5 @@
 Revision history for Perl extension Algorithm::QuadTree::XS.
 
-0.01  Wed May 25 19:03:48 2022
-	- original version; created by h2xs 1.23 with options
-		-A -n Algorithm::QuadTree::XS
+0.01 Wed May 25 2022
+	- original version
 
