--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Algorithm::QuadTree::XS.
 
+0.02 Tue May 31 2022
+	- fix compilation on threaded perls
+
 0.01 Mon May 30 2022
 	- original version
 
